tests/should_fail/bug/1519.stderr
error[E0046]: not all trait items implemented, missing: `le`, `idemp`
  --> 1519.rs:26:1
   |
20 |       fn le(self, other: Self) -> bool;
   |       --------------------------------- `le` from trait
...
23 |       fn idemp(self) -> bool;
   |       ----------------------- `idemp` from trait
...
26 | / impl<T, U> RA for (T, U)
27 | | where
28 | |     T: RA,
29 | |     U: RA,
   | |__________^ missing `le`, `idemp` in implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
